Edit PasswordEncoder in joinService